Colorful Animated Lines

--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
       <div class="top">
         <h1>Welcome to my website</h1>
       </div>
+      <div class="delayDiv">
+      	<div class="animationLineOne"></div>
+      	<div class="animationLineTwo"></div>
+			</div>
       
       <div class="totalAbout">
         <div class="aboutMe">
           <p>Hi, My name is Tristan Ross. I'm a Junior Computer Science Major at Cal State East Bay. I'm interested in game development and software. I love soundtracks, football, hiking with my sister, and playing video games. My favorite games of all time are Halo: Reach, Lord of the Rings: Battle for Middle Earth 2, and World of Warcraft. Some games I like to play now are Star Wars Battlefront II, Battlefield 1, and Need for Speed Payback.</p>
           <div class="aboutMeBorder"></div>
         </div>
-
+      <div class="delayDiv">
+      	<div class="animationLineThree"></div>
+      	<div class="animationLineFour"></div>
+			</div>
         <div class="links">
           <h1 class="leftSide">Check out the stuff I'm working on:</h1>
 
