--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+JP" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">     
     
   </head>
@@ -38,12 +39,13 @@
 				</div>
 
       	<div class="links">
-        	<h1 class="leftSide">Check out the projects I'm working on:</h1>
-
+        	<h1 class="leftSide">Projects and Social</h1>
+       		
        		<ul>
-         		<li class="itemWrapper"><a href="https://github.com/TristanRoss/Portfolio"><span>This Website</span></a></li>
+         		<li class="itemWrapper"><a href="https://github.com/TristanRoss/Portfolio">This Website</a></li>
+         		<li class="itemWrapper"><a href="https://www.linkedin.com/in/tristan-ross/">LinkedIn</a></li>
         	</ul>
-      	</div>
+      	<div>
     	</div>
 
    		<div class="space"></div>
