Color coded links

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 				</div>
 
       	<div class="links">
-        	<h1 class="leftSide">Projects and Social</h1>
+        	<h1 class="leftSide"><span class="pro">Projects</span> and <span class="soc">Social</span></h1>
        		
        		<ul>
-         		<li class="itemWrapper"><a href="https://github.com/TristanRoss/Portfolio">This Website</a></li>
-         		<li class="itemWrapper"><a href="https://www.linkedin.com/in/tristan-ross/">LinkedIn</a></li>
+         		<li class="itemWrapper"><a href="https://github.com/TristanRoss/Portfolio" class="pro">This Website</a></li>
+         		<li class="itemWrapper"><a href="https://www.linkedin.com/in/tristan-ross/" class="soc">LinkedIn</a></li>
         	</ul>
       	<div>
     	</div>
