2 more animation blocks

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
       	<div class="animationLineTwo"></div>
 			</div>
       
+      <div class="rotate"></div>
+      <div class="rotateOne"></div>
+
       <div class="totalAbout">
+
+
         
         <div class="aboutMe">
 
