JavaCalculator Link & Minor adjustments
Changed px to percentages to get a more logic based design. Couple name changes. Slight animation changes. Added link to JavaCalculator project.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
        		
        		<ul>
          		<li class="itemWrapper"><a href="https://github.com/TristanRoss/Portfolio" class="pro">This Website</a></li>
+         		<li class="itemWrapper"><a href="https://github.com/TristanRoss/JavaCalculator" class="pro">Java Calculator</a></li>
          		<li class="itemWrapper"><a href="https://www.linkedin.com/in/tristan-ross/" class="soc">LinkedIn</a></li>
         	</ul>
       	<div>
