--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        		
        		<ul>
          		<li class="itemWrapper"><a href="https://github.com/TristanRoss/Portfolio" class="pro">This Website</a></li>
-         		<li class="itemWrapper"><a href="https://github.com/TristanRoss/JavaCalculator" class="pro">Java Calculator</a></li>
+         		<li class="itemWrapper"><a href="javaCalculator.html" class="pro">Java Calculator</a></li>
          		<li class="itemWrapper"><a href="https://www.linkedin.com/in/tristan-ross/" class="soc">LinkedIn</a></li>
         	</ul>
       	<div>
