--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <body>
     <div class="wrapper">
 
-      <div class="top">
-        <h1>Welcome to my website</h1>
+      <div class="topWrapper">
+        <div class="top">
+          <h1>Welcome to my website</h1>
+        </div>
       </div>
 
       <div class="delayDiv">
@@ -44,8 +46,9 @@
 				</div>
 
       	<div class="links">
-        	<h1 class="leftSide"><span class="pro">Projects</span> and <span class="soc">Social</span></h1>
-       		
+          <div class="projAndSoc">
+        	  <h1 class="leftSide"><span class="pro">Projects</span> and <span class="soc">Social</span></h1>
+       		</div>
        		<ul>
          		<li class="itemWrapper"><a href="https://github.com/TristanRoss/Portfolio" class="pro">This Website</a></li>
          		<li class="itemWrapper"><a href="javaCalculator.html" class="pro">Java Calculator</a></li>
