--- a/javaCalculator.html
+++ b/javaCalculator.html
@@ -10,7 +10,9 @@
 	</head>
 	
 	<body>
-		<h1>Welcome to my Java Calculator Project</h1>
+		<div class="top">
+			<h1>Welcome to my Java Calculator Project</h1>
+		</div>
 
 		<video src="Java Calculator Output Video.mp4"
 						preload="metadata"
