--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="aboutMe">
 
           <p>Hi, my name is Tristan Ross. I'm a Computer Science Major at Cal State East Bay. 
-            I'm currently going through the <a id="odin" href="https://www.theodinproject.com/">The Odin Project</a>'s curriculum to learn full stack web development. 
+            I'm currently going through <a id="odin" href="https://www.theodinproject.com/">The Odin Project</a>'s curriculum to learn full stack web development. 
             I'm actively looking for an internship for summer 2019. I can't wait to start working and learning in the field. 
             A little bit about me: I love listening to original scores from movies, watching football, hiking with my sister, and playing video games. 
             My favorite games of all time are Halo: Reach, Lord of the Rings: Battle for Middle Earth 2, and World of Warcraft. 
