Edit index.html and styles.css
Added coding instructor position at Code With Us

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         
         <div class="aboutMe">
 
-          <p>Hi, my name is Tristan Ross. I'm a Computer Science Major at Cal State East Bay. 
-            I'm currently going through <a id="odin" href="https://www.theodinproject.com/">The Odin Project</a>'s curriculum to learn full stack web development. 
-            I'm actively looking for an internship for summer 2019. I can't wait to start working and learning in the field. 
+          <p>Hi, my name is Tristan Ross. I'm a Coding Instructor at <a class="odin" href="https://codewithus.com">Code With Us</a>, and a Computer Science Major graduating in May 2020 at Cal State East Bay. 
+            I'm currently going through <a class="odin" href="https://www.theodinproject.com/">The Odin Project</a>'s curriculum to learn full stack web development. 
             A little bit about me: I love listening to original scores from movies, watching football, hiking with my sister, and playing video games. 
             My favorite games of all time are Halo: Reach, Lord of the Rings: Battle for Middle Earth 2, and World of Warcraft. 
             Some games I like to play now are Total War: Warhammer II, Battlefield 1, and Need for Speed Payback.</p>
@@ -59,6 +58,7 @@
             <li class="itemWrapper"><a href="javaCalculator.html" class="pro">Java Calculator</a></li>
             <li class="itemWrapper"><a href="https://tristanross.github.io/WebCalculator" class="pro">JavaScript Calculator</a></li>
             <li class="itemWrapper"><a href="https://www.linkedin.com/in/tristan-ross/" class="soc">LinkedIn</a></li>
+            <li class="itemWrapper"><a href="https://github.com/TristanRoss" class="soc">GitHub</a></li>
         	</ul>
       	<div>
     	</div>
